--- a/Assets/Project/Scripts/Core/PettyFrightlancer.Core.asmdef
+++ b/Assets/Project/Scripts/Core/PettyFrightlancer.Core.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "GUID:75469ad4d38634e559750d17036d5f7c",
         "GUID:84651a3751eca9349aac36a66bba901b",
-        "GUID:9e24947de15b9834991c9d8411ea37cf"
+        "GUID:9e24947de15b9834991c9d8411ea37cf",
+        "GUID:6dd8ff25ae887ba4882df4dbdd52543d"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
