--- a/Assets/Project/Scripts/UI/PettyFrightlancer.UI.asmdef
+++ b/Assets/Project/Scripts/UI/PettyFrightlancer.UI.asmdef
@@ -6,7 +6,8 @@
         "GUID:343deaaf83e0cee4ca978e7df0b80d21",
         "GUID:2bafac87e7f4b9b418d9448d219b01ab",
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
-        "GUID:7ef091a885212894b81c6aa200039a31"
+        "GUID:7ef091a885212894b81c6aa200039a31",
+        "GUID:6dd8ff25ae887ba4882df4dbdd52543d"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
